--- a/mcp-servers/python/voice_daemon/pyproject.toml
+++ b/mcp-servers/python/voice_daemon/pyproject.toml
@@ -11,6 +11,9 @@ servers = [
   "aiohttp>=3.9",
   "websockets>=12",
   "numpy>=1.24",
+  "pvporcupine>=3.0.0",
+  "sounddevice>=0.4.6",
+  "requests>=2.31.0",
 ]
 
 [project.scripts]
@@ -18,4 +21,3 @@ voice-daemon = "voice_daemon.__main__:main"
 
 [tool.setuptools.packages.find]
 where = ["."]
-
