arXiv MCP: always-online + robust search/top
- Remove net/xml feature flags; networking on by default.
- arXiv client: build search_query with proper AND/OR; use reqwest .query();
  validate status/content-type; namespace-robust Atom parsing; PDF link detection.
- Add search_page() and month-window paging for top; configurable categories.
- Return empty arrays (not errors) for zero-entry feeds.
- mcp-arxiv: stdio loop to handle multiple requests.

Core/TUI integrations:
- Tool schemas (chat + realtime): explicit arxiv params + examples.
- System prompt: arXiv usage guidance; discourage summarize (unimplemented).
- Launcher: always cargo build --workspace before starting.

Docs: remove ARXIV_ENABLE_NET mention; update TOOLS.md arXiv section.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,6 @@ members = [
   "mcp-servers/rust/git",
   "mcp-servers/rust/codex",
   "mcp-servers/rust/codex-mock",
+  "mcp-servers/rust/arxiv",
 ]
 resolver = "2"
