fix(ui-tui): await agent creation and clean warnings
test(core): add agents and codex API/SSE tests
- codex_api: prompt logging and sessions/detail
- agents_api_ext: replan artifacts; resume CTR (best-effort)
- agents_sse: backlog + live events; pause/abort endpoints

chore(core): add http-body-util (dev-dep) for streaming test helpers

--- a/apps/assistant-core/Cargo.toml
+++ b/apps/assistant-core/Cargo.toml
@@ -39,6 +39,7 @@ tempfile = "3.10"
 axum = { version = "0.7", features = ["ws", "macros"] }
 tokio-tungstenite = { version = "0.21" }
 tungstenite = { version = "0.23" }
+http-body-util = "0.1"
 
 [lib]
 name = "assistant_core"
