--- a/apps/assistant-core/Cargo.toml
+++ b/apps/assistant-core/Cargo.toml
@@ -15,6 +15,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 thiserror = "1.0"
 hyper = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.5", features = ["cors"] }
 uuid = { version = "1", features = ["v4"] }
 once_cell = "1.19"
 parking_lot = "0.12"
